master: fix spotlight section by wrapping div

--- a/src/app/pages/home/cta-section/cta-section.scss
+++ b/src/app/pages/home/cta-section/cta-section.scss
@@ -3,6 +3,8 @@
 }
 
 .cta-section {
+  position: relative;
+  overflow: hidden;
   padding: 4rem 2rem;
 
   @media (width >= 1024px) {
