--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -1,3 +1,6 @@
-:host {
-  display: block;
+.home-wrapper {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
